--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A simpler version Of Youtube"
     />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <!--
